--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/mdx": "^15.4.5",
     "@prisma/client": "^6.13.0",
     "@types/bcryptjs": "^2.4.6",
@@ -21,7 +21,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
