--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mdx": "^2.0.13",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
+    "glob": "^11.0.3",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
