--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.12",
     "glob": "^11.0.3",
     "lucide-react": "^0.536.0",
+    "mongodb": "^6.18.0",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "prisma": "^6.13.0",
